Change architectural layers

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".data.ui.MainActivity">
+        tools:context="com.unifi.ibt.ui.MainActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvWord"
