--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include"
-            tools:listitem="@layout/item_word_count" />
+            app:layout_constraintTop_toBottomOf="@+id/include"/>
 
         <ProgressBar
             android:id="@+id/progress_bar"
@@ -42,5 +41,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/include" />
 
+        <include layout="@layout/layout_error"/>
+        <include layout="@layout/layout_empty"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
