--- a/app/src/main/res/layout/app_toolbar.xml
+++ b/app/src/main/res/layout/app_toolbar.xml
@@ -39,12 +39,12 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginEnd="16dp"
-                    android:tint="@color/white"
                     android:tag="asc"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_sort" />
+                    app:srcCompat="@drawable/ic_sort"
+                    app:tint="@color/white" />
 
                 <androidx.appcompat.widget.SearchView
                     android:id="@+id/search_word"
